tests/modules/bad/module_unknown_import.hel
// @name module_unknown_import
// @phase modules
// @expect error

import badmod

main = () : IO<()> {
    0
}
